<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/img_preview"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@color/gray"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:fadingEdge="horizontal"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/fade_image_background"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_marginStart="170dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/title"
                    android:fontFamily="@font/inter_black"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    app:autoSizeTextType="uniform"/>

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/bullet"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/duration"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_text"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:fontFamily="@font/inter_extralight"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/overview_text"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:fontFamily="@font/inter_extralight"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/featured_cast_text"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_cast"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_poster"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="351dp"
                android:layout_marginBottom="12dp"
                android:elevation="5dp"
                android:src="@color/gray"
                card_view:shapeAppearanceOverlay="@style/RoundedSquare"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="310dp"
                android:layout_marginStart="165dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_stars_24" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/score"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_unfavorite"
        android:layout_gravity="end|top"
        android:layout_margin="20dp"
        android:backgroundTint="@color/yellow"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>