<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.application.moviecatalogue.ui.fragment.movie.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_navigation_movie_to_navigation_tv_show"
            app:destination="@id/navigation_tv_show" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.application.moviecatalogue.ui.fragment.tvshow.TvShowFragment"
        android:label="@string/title_tvshows"
        tools:layout="@layout/fragment_tv_show" >
        <action
            android:id="@+id/action_navigation_tv_show_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.application.moviecatalogue.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />
</navigation>